2001-02-22  Alain Magloire

	* src/savedir.c (isdir1) : New function, calling isdir with
	the correct pathname.

2001-02-19  Isamu Hasegawa

	Avoid incorrect state transition in multibyte environments.

	* dfa.h (nmultibyte_prop) : new variable.
	(multibyte_prop) : new variable.
	* dfa.c (addtok) : set inputwcs.
	(dfastate) : avoid incorrect state transition in multibyte
	environments.
	(dfaexec) : likewise.
	(dfainit) : init multibyte_prop.
	(dfafree) : free multibyte_prop.
	(inputwcs): new variable.

2001-02-19  Isamu Hasegawa

	Handle a multibyte character followed by '*', '+', and '{n,m}'
	correctly.

	* dfa.c (update_mb_len_index): new function.
	Support for multibyte string.
	(FETCH) : call update_mb_len_index.
	(lex) : check cur_mb_index not to misunderstand multibyte characters.
	(atom) : make a tree from a multibyte character.
	(dfaparse) : initialize new variables.
	(mbs) : new variable.
	(cur_mb_len) : new variable.
	(cur_mb_index) : new variable.

2001-02-18  Jim Meyering

	* m4/dosfile.m4 (AC_DOSFILE): Move AC_DEFINEs out of AC_CACHE_CHECK.

2001-02-17  Alain Malgoire

	* doc/grep.texi : Document the new options and the new behaviour
	back-references are local.  Use excerpt from Karl Berry regex
	texinfo.

	* bootstrap/Makefile.try : Added xstrtoumax.o xstrtoul.o hard-local.o

2001-02-17  Alain Magloire

	From Guglielmo 'bond' Bondioni :
	The bug was that using a multi line file that contained REs (one per
	line), backreferences in the REs were considered global (to the file)
	and not local (to the line).
	That is, \1 in line n refers to the first \(.\) in the whole file,
	rather than in the line itself.

	From Tapani Tarvainen :
	# Re: grep -e '\(a\)\1' -e '\(b\)\1'
	That's not the way it should work: multiple -e arguments
	should be treated as independent patterns and back references
	should not refer to previous ones.

	From Paul Eggert :
	GNU grep currently does not issue
	diagnostics for the following two cases, both of which are erroneous: